﻿============================== next release ==============================

  removed data (unreliable: published model does not match graphical data)
    main/LaAlO3/nk/Chernova.yml
    main/MgAl2O4/nk/Chernova.yml
    other/doped crystals/Nb-SrTiO3/nk/Chernova.yml
    other/mixed crystals/LaAlO3-Sr2TaAlO6/nk/Chernova.yml
  new data (thanks to Roy van der Linden, Advanced Research Center for Nanolithography, Amsterdam, Netherlands, for submitting data in YAML format!)
    main/CaF2/n2/VanderLinden.yml
    main/KBr/n2/VanderLinden.yml
    main/SiO2/n2/VanderLinden.yml
    glass/optical/BK7/n2/VanderLinden.yml
  new data (thanks to Pierre Gadras, LAAS-CNRS, France, for submitting data in YAML format!)
    other/semiconductor alloys/AlAs-GaAs/nk/Gadras-0.yml
    other/semiconductor alloys/AlAs-GaAs/nk/Gadras-32.yml
    other/semiconductor alloys/AlAs-GaAs/nk/Gadras-53.yml
    other/semiconductor alloys/AlAs-GaAs/nk/Gadras-90.yml
    other/semiconductor alloys/AlAs-GaAs/nk/Gadras-100.yml
	main/AlAs/nk/Gadras.yml
	main/GaAs/nk/Gadras.yml
  new data (thanks to Georgy Ermolaev, XPANCEO, Dubai, United Arab Emirates, for submitting data in YAML format!)
    main/MoOCl2/nk/Ermolaev-alpha.yml
    main/MoOCl2/nk/Ermolaev-beta.yml
    main/MoOCl2/nk/Ermolaev-gamma.yml
  new data (thanks to Tomas Klinavičius, Kaunas University of Technology, Lithuania, for submitting data!)
    main/Au/nk/Klinavicius-7.2nm.yml
    main/Au/nk/Klinavicius-11.4nm.yml
    main/Au/nk/Klinavicius-19.7nm.yml
    main/Au/nk/Klinavicius-30.4nm.yml
    main/Au/nk/Klinavicius-40.0nm.yml
  new data (thanks to Samuel Gyger, Stanford University, USA, for suggesting data!)
    other/doped crystals/MgO-LiNbO3/nk/Zelmon-o.yml
    other/doped crystals/MgO-LiNbO3/nk/Zelmon-e.yml
    other/doped crystals/MgO-LiNbO3/nk/Gayer-5-o.yml
    other/doped crystals/MgO-LiNbO3/nk/Gayer-5-e.yml
    other/doped crystals/MgO-LiNbO3/nk/Gayer-1-e.yml