@@ -3,12 +3,12 @@
 # copyright and related rights waived via CC0 1.0
 
 REFERENCES: |
-    M. Wöhlecke, V. Marrello, A. Onton
-    Refractive index of BaTiO3 and SrTiO3 films.
-    <a href="https://doi.org/10.1063/1.323822"><i>J. Appl. Phys.</i> <b>48</b>, 1748-1750 (1987)</a>
+    M. Wöhlecke, V. Marrello, A. Onton.
+    Refractive index of BaTiO<sub>3</sub> and SrTiO<sub>3</sub> films.
+    <a href="https://doi.org/10.1063/1.323822"><i>J. Appl. Phys.</i> <b>48</b>, 1748–1750 (1977)</a>
 COMMENTS: |
-    Amorphous, 300K
+    Amorphous 1–4 µm thin film. Prepared by RF sputter deposition at 300 K substrate temperature.
 DATA:
   - type: formula 1
     wavelength_range: 0.3 1.0
-    coefficients: 0 2.696401538129214 0.16101843952363673
+    coefficients: 0 2.6964 0.16102
