@@ -6,9 +6,11 @@ REFERENCES: |
     M. Wöhlecke, V. Marrello, A. Onton.
     Refractive index of BaTiO<sub>3</sub> and SrTiO<sub>3</sub> films.
     <a href="https://doi.org/10.1063/1.323822"><i>J. Appl. Phys.</i> <b>48</b>, 1748–1750 (1977)</a>
+CONDITIONS:
+    temperature: 300
 COMMENTS: |
-    Amorphous 1–4 µm thin film. Prepared by RF sputter deposition at 500 K substrate temperature.
+    Amorphous 1–4 µm thin film. Prepared by RF sputter deposition at 300 K substrate temperature.
 DATA:
   - type: formula 1
     wavelength_range: 0.3 1.0
-    coefficients: 0 2.6705 0.16102
+    coefficients: 0 2.7791 0.16755
